--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,7 @@
     <string name="category">category</string>
     <string name="description">description</string>
     <string name="save">Save</string>
+    <string name="edit">Edit</string>
     <string-array name="task_categories">
         <item>Select Category</item>
         <item>Personal</item>
